--- a/front/package.json
+++ b/front/package.json
@@ -7,11 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
+    "vue": "^3.0.5",
+    "vue-router": "4.0.5",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.5",
+    "sass": "^1.32.8",
     "vite": "^2.1.5"
   }
 }
